--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,57 @@ html,
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
+}
+
+.container {
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+}
+
+.container>* {
+    border: 1px solid black;
+}
+
+header {
+    grid-column: 1 / span 8;
+    grid-row: 1 / span 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+}
+
+nav {
+    grid-column: 1 / span 2;
+    grid-row: 2 / span 6;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+}
+
+main {
+    grid-column: 3 / span 6;
+    grid-row: 2 / span 6;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+}
+
+footer {
+    grid-column: 1 / span 8;
+    grid-row: 8 / span 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+}
+
+img {
+    height: 150px;
+    width: 150px;
 }
